<resources>
    <string name="app_name">文道阅读</string>
    <string name="empty_string"></string>
    <string name="title">文道阅读语音插件</string>
    <string name="initializing">正在初始化&#8230;</string>
    <string name="failure">初始化失败，抱歉</string>
    <string name="speak_menu_item">朗读</string>
    <string name="no_tts_installed">连接不上设备的语音引擎</string>
    <string name="initialization_error">找不到阅读器中的数据</string>
    <string name="language_is_not_set">书籍语言还没设置，正在尝试用%0阅读。</string>
    <!--Text-to-speech data for %0 are not installed. Trying to read book in %1.-->
    <string name="no_data_for_language" formatted="false">%0转语音数据还没安装。尝试从1%开始朗读</string>
    <string name="speed">速率:</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="edit">Edit</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <!-- Omnibar -->
    <string name="omnibar_search_edit_text_hint">Search DuckDuckGo</string>
    <string name="omnibar_content_description_back_button">Cancel search input</string>

    <!-- Browser Menu -->
    <string name="browser_menu_back">Back</string>
    <string name="browser_menu_forward">Forward</string>
    <string name="browser_menu_refresh">Refresh</string>
    <string name="browser_menu_save_bookmark">Save bookmark</string>
    <string name="browser_menu_bookmarks">@string/bookmarks</string>
    <string name="browser_menu_tab_switcher">Tab switcher</string>
    <string name="browser_menu_delete_text">Delete text</string>
    <string name="browser_menu_new_tab">New tab</string>
    <string name="browser_menu_copy_url">Copy URL</string>

    <!-- Main -->
    <string name="main_label_copy_url_to_clipboard">URL</string>
    <string name="main_copy_to_clipboard_success">Url copied to clipboard</string>

    <!-- Bookmarks -->
    <string name="bookmarks_toolbar">@string/bookmarks</string>
    <string name="bookmarks_empty">No bookmarks yet</string>

    <!-- Bookmark -->
    <string name="bookmark_content_description_delete_button">Delete bookmark</string>
    <string name="bookmark_content_description_drag_item">Move item</string>

    <!-- Bookmarks Menu -->
    <string name="bookmarks_menu_edit">@string/edit</string>

    <!-- Edit Bookmark Dialog -->
    <string name="bookmark_dialog_save_button">@string/save</string>
    <string name="bookmark_dialog_cancel_button">@string/cancel</string>
    <string name="bookmark_dialog_title_edit">Edit bookmark</string>
    <string name="bookmark_dialog_title_save">Save bookmark</string>
    <string name="bookmark_dialog_name_hint">Bookmark name</string>
    <string name="bookmark_dialog_url_hint">Bookmark URL</string>
    <string name="bookmark_saved_prompt">Bookmark Saved</string>

    <!-- Tab Switcher -->
    <string name="tab_switcher_title">Private Tabs</string>
    <string name="tab_switcher_title_no_tabs">No Tabs</string>
    <string name="tab_switcher_fire_button">Clear All</string>
    <string name="tab_switcher_done_button">Done</string>
    <string name="tab_switcher_content_description_new_button">Create new tab</string>
    <string name="tab_switcher_content_description_fire_button">Delete all tabs and data</string>

    <!-- Tab -->
    <string name="tab_content_description_delete_button">Delete tab</string>
    <string name="tab_content_description_favicon_image_view">Favicon</string>

    <!-- Suggestion -->
    <string name="suggestion_content_description_icon_image_view">Autocomplete suggestion</string>
    <string name="suggestion_content_description_add_to_query_button">Add text to query</string>

    <string name="high_score">HIGH SCORE</string>
    <string name="score">SCORE</string>
    <string name="instructions">Swipe to move. 2 + 2 = 4. Reach 2048.</string>
    <string name="you_win">You Win!</string>
    <string name="game_over">Game Over!</string>
    <string name="go_on">Tap to Continue</string>
    <string name="for_now">For now…</string>
    <string name="endless">"Endless" Mode</string>

    <!-- Confirmation dialog-->
    <string name="reset">Reset</string>
    <string name="continue_game">Cancel</string>
    <string name="reset_dialog_title">Reset game?</string>
    <string name="reset_dialog_message">Are you sure you wish to reset the game?</string>
    <string name="header">2048</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>
