<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppBar.TabSwitcher"
            app:elevation="0dp">

            <TextView
                android:id="@+id/tab_switcher_title_text_view"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:clickable="true"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/tab_switcher_title"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="normal" />
        </android.support.design.widget.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/tab_switcher_background">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/tab_switcher_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="80dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/tab_switcher_bottom_bar_background">

                <ImageButton
                    android:id="@+id/tab_switcher_new_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/tab_switcher_content_description_new_button"
                    android:src="@drawable/ic_new" />

                <Button
                    android:id="@+id/tab_switcher_done_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/tab_switcher_done_button"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
            </FrameLayout>

            <LinearLayout
                android:id="@+id/tab_swither_fire_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="-16dp"
                android:background="@drawable/fire_background"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="33.8dp"
                    android:contentDescription="@string/tab_switcher_content_description_fire_button"
                    android:src="@drawable/ic_fire" />

                <TextView
                    android:id="@+id/tab_switcher_fire_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/tab_switcher_fire_button"
                    android:textColor="@color/tab_switcher_bottom_bar_fire_text"
                    android:textSize="14sp" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</layout>